# UTPR_MPC

./: .gitignore  README.md  adip_lpv_mpc.m  draw_utpr.m  utpr_lpv.m  utpr_lpv_mpc.m  utpr_ode.m
CPP/: .gitignore  CMakeLists.txt  readme.txt
CPP/demo/mpc_test/: main.cpp  testSimulink.cpp
CPP/src/mpc/: utpr_mpc.cpp  utpr_mpc.hpp
CPP/src/plan/: pid.cpp  pid.hpp  plan.cpp  plan.hpp
CPP/src/solver/: math.cpp  math.hpp  qpsolver.cpp  qpsolver.hpp
CPP/src/utils/: utils.cpp  utils.hpp
CPP/src/zmq/: statcal_util.cpp  statcal_util.hpp  zmqmsg.cpp  zmqmsg.hpp
Simulink_test/: UTPR_MPC_LPV.slx  UTPR_MPC_LPV_22.slx  readme.txt  startup.m  utpr_lqr.m  utpr_model_complex.slx  utpr_model_complex_22.slx  utpr_model_complex_para.m  utpr_mpc.m
Simulink_test/common/: buildCoSimExample.m  ud_Tri_parameter.m  utpr.m  utpr_lpv.m  utpr_lqr_m.m  utpr_lti.m
Simulink_test/common/sfun/: acrobotclient.cpp  controluntriplnclient.cpp  controluntriplnclient.hpp  controluntriplnsfun.cpp  controluntriplnsfun.mexw64
Simulink_test/common/util/: statcal_util.cpp  statcal_util.hpp
UTPR_Matlab_Model/ADIP/Exercise5_1/Solution/: ex_1.m
UTPR_Matlab_Model/ADIP/Exercise5_1/Task/: ex_1.m
UTPR_Matlab_Model/ADIP/Exercise5_3/: Readme.md  setup_acados.m
UTPR_Matlab_Model/ADIP/Exercise5_3/Solution/: exercise_acados_mpc_implementation.m  exercise_yalmip_mpc_implementation.m
UTPR_Matlab_Model/ADIP/Exercise5_3/Task/: exercise_yalmip_mpc_implementation.m
UTPR_Matlab_Model/ADIP/Exercise5_6/: ex_6.m
UTPR_Matlab_Model/ADIP/common/: adip_lpv.m  adip_lti.m  draw_adip.m  get_terminal_ingredients.m
UTPR_Matlab_Model/UTPR/: utpr_lpv_mpc.m  utpr_lqr.m
UTPR_Matlab_Model/UTPR/LQR_result/: joint_position.fig  joint_torque.fig  joint_velocity.fig
UTPR_Matlab_Model/UTPR/MPC_result/: joint_position.fig  joint_torque.fig  joint_velocity.fig
UTPR_Matlab_Model/UTPR/common/: draw_utpr.m  utpr_lpv.m  utpr_lti.m  utpr_ode.m  utpr_xy_position.m
UTPR_Matlab_Model/utpr_0520/: draw_utpr.m  matrix.txt  rho_matrix.txt  utpr_lpv.cpp  utpr_lpv.hpp  utpr_lpv.m  utpr_lpv_mpc.m  utpr_lpv_mpc_simple.m
UTPR_Matlab_Model/utpr_com/: draw_utpr.m  utpr_com.m  utpr_com_ lpv_mpc.m  utpr_cx_test.m  utpr_lpv.m  utpr_lpv_mpc.m  utpr_ode.m
common/: adip2_lpv.m  adip2_ode.m  adip_lpv.m  adip_ode.m  clamp.m  get_terminal_ingredients_lqr.m
